[package]
name = "yuma"
version = "0.2.1"
edition = "2021"

[dependencies]
yumadoc = { path = "../yumadoc" }

thiserror = "1"
color-eyre = "0.6"
lazy_static = "1"

serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }

nix = { version = "0.27", default-features = false, features = ["hostname"] }

simplelog = "0.12"
log = "0.4"

requestty = "0.5"
