[package]
name = "yuma"
version = "0.2.2"
edition = "2021"

[dependencies]
yumadoc = { path = "../yumadoc" }

thiserror = "1"
color-eyre = "0.6"

serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }

nix = { version = "0.27", features = ["hostname"] }

simplelog = { version = "0.12", features = ["paris"] }
log = "0.4"

requestty = "0.5"
atty = "0.2"
stub = { git = "https://github.com/focus172/stub" }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
